syntax = "proto3";

package kv;

import "eraftpb.proto";
import "google/protobuf/empty.proto";

service Kv {
    // Required to get connection going.
    rpc Handshake(google.protobuf.Empty) returns (google.protobuf.Empty);

    rpc Join(JoinRequest) returns (JoinResponse);

    rpc Put(PutRequest) returns (PutResponse);

    rpc Raft(stream Message) returns (google.protobuf.Empty);
}

message PutRequest {
    bytes key = 1;
    bytes value = 2;
}

message PutResponse {}

message JoinRequest {
    uint64 id = 1;
}

message JoinResponse {
    bool joined = 1;
}
